--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "start": "node ./index"
   },
   "dependencies": {
+    "@hapi/boom": "^7.4.2",
     "@hapi/hapi": "^18.3.1",
+    "@hapi/inert": "^5.2.1",
     "@hapi/joi": "^15.0.3",
-    "@hapi/nes": "^11.2.0"
+    "@hapi/nes": "^11.2.0",
+    "@hapi/vision": "^5.5.2",
+    "hapi-swagger": "^10.0.2",
+    "mongoose": "^5.6.9",
+    "node-schedule": "^1.3.2"
   }
 }
