--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "node ./index"
+    "start": "node ./index",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@hapi/boom": "^7.4.2",
@@ -19,5 +20,8 @@
     "hapi-swagger": "^10.0.2",
     "mongoose": "^5.6.9",
     "node-schedule": "^1.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0"
   }
 }
