--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "node-schedule": "^1.3.2"
   },
   "devDependencies": {
-    "eslint": "^6.1.0"
+    "eslint": "^6.1.0",
+    "husky": "^3.0.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   }
 }
