--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "scripts": {
     "start": "node ./index",
+    "test": "mocha tests/**/*spec.js",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -22,8 +23,11 @@
     "node-schedule": "^1.3.2"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.1.0",
-    "husky": "^3.0.3"
+    "husky": "^3.0.3",
+    "mocha": "^6.2.0"
   },
   "husky": {
     "hooks": {
