--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,9 @@
   },
   "rules": {
       "block-scoped-var": 1,
-      "no-console": 1,
       "constructor-super": 2,
+      "keyword-spacing": 2,
+      "no-console": 1,
       "no-class-assign": 2,
       "no-compare-neg-zero": 2,
       "no-cond-assign": 2,
@@ -52,6 +53,7 @@
       "no-unused-labels": 2,
       "no-unused-vars": 1,
       "require-yield": 2,
+      "space-before-blocks": 1,
       "use-isnan": 2,
       "valid-typeof": 2,
       "indent": ["error", 2]
